<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_tipcalc"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BillSummaryActivty" >

    <RelativeLayout
        android:id="@+id/rl_bill_subtotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp" >

        <TextView
            android:id="@+id/tv_bill_subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/summary_bill_subtotal"
            android:textColor="#DCFFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_bill_subtotal_amt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_bill_subtotal"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_bill_subtotal"
            android:gravity="right"
            android:text="$ 100.00"
            android:textColor="#DCFFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_tip_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_bill_subtotal"
        android:padding="14dp" >

        <TextView
            android:id="@+id/tv_tip_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/summary_tip_amt_hint"
            android:textColor="#DCFFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_tip_amount_amt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_tip_amount"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_tip_amount"
            android:gravity="right"
            android:text="$ 10.00"
            android:textColor="#DCFFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:id="@+id/v_total_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rl_tip_amount"
        android:background="@color/lv_selected_color" />

    <RelativeLayout
        android:id="@+id/rl_grand_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/v_total_separator"
        android:padding="14dp" >

        <TextView
            android:id="@+id/tv_grand_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/summary_grand_total"
            android:textColor="#DCFFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_grand_total_amt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_grand_total"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_grand_total"
            android:gravity="right"
            android:text="$ 110.00"
            android:textColor="#DCFFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:id="@+id/v_total_separator_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rl_grand_total"
        android:background="@color/lv_selected_color" />

    <RelativeLayout
        android:id="@+id/rl_num_people_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/v_total_separator_bottom"
        android:layout_marginTop="40dp" >

        <RelativeLayout
            android:id="@+id/rl_num_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp" >

            <TextView
                android:id="@+id/tv_num_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/summary_number_people"
                android:textColor="#DCFFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_num_people_amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/tv_num_people"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_num_people"
                android:gravity="right"
                android:text="10"
                android:textColor="#DCFFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <View
            android:id="@+id/v_amt_per_person_top"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rl_num_people"
            android:background="@color/lv_selected_color" />

        <RelativeLayout
            android:id="@+id/rl_per_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/v_amt_per_person_top"
            android:padding="14dp" >

            <TextView
                android:id="@+id/tv_per_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/summary_amt_per_person"
                android:textColor="#DCFFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_per_person_amt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/tv_per_person"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_per_person"
                android:gravity="right"
                android:text="$ 11.00"
                android:textColor="#DCFFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <View
            android:id="@+id/v_amt_per_person_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rl_per_person"
            android:background="@color/lv_selected_color" />
    </RelativeLayout>

</RelativeLayout>